load("@bazel_lib//lib:utils.bzl", bazel_lib_utils = "utils")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("//ts/private:options.bzl", "options")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

# Users can enable with --@aspect_rules_ts//ts:skipLibCheck=always
string_flag(
    # Note: this name is chosen to be searchable when users look for "skipLibCheck" in their repo,
    # as that's the way it appears in tsconfig.json or tsc command line.
    name = "skipLibCheck",
    build_setting_default = "unspecified",
    values = [
        "always",
        "honor_tsconfig",
        "unspecified",
    ],
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "default_to_tsc_transpiler",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "verbose",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "supports_workers",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "generate_tsc_trace",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "validation_typecheck",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

# Note, users could use a Transition to make a subgraph of their depgraph opt-in to skipLibCheck.
config_setting(
    name = "skip_lib_check.always",
    flag_values = {":skipLibCheck": "always"},
)

config_setting(
    name = "skip_lib_check.honor_tsconfig",
    flag_values = {":skipLibCheck": "honor_tsconfig"},
)

config_setting(
    name = "verbose_flag",
    flag_values = {
        ":verbose": "true",
    },
)

config_setting(
    name = "supports_workers_flag",
    flag_values = {
        ":supports_workers": "true",
    },
)

config_setting(
    name = "default_to_tsc_transpiler_flag",
    flag_values = {
        ":default_to_tsc_transpiler": "true",
    },
)

config_setting(
    name = "generate_tsc_trace_flag",
    flag_values = {
        ":generate_tsc_trace": "true",
    },
)

config_setting(
    name = "validation_typecheck_flag",
    flag_values = {
        ":validation_typecheck": "true",
    },
)

options(
    name = "options",
    default_to_tsc_transpiler = select({
        ":default_to_tsc_transpiler_flag": True,
        "//conditions:default": False,
    }),
    generate_tsc_trace = select({
        ":generate_tsc_trace_flag": True,
        "//conditions:default": False,
    }),
    skip_lib_check = select(
        {
            "@aspect_rules_ts//ts:skip_lib_check.always": "always",
            "@aspect_rules_ts//ts:skip_lib_check.honor_tsconfig": "honor_tsconfig",
            "//conditions:default": "",
        },
    ),
    supports_workers = select({
        ":supports_workers_flag": True,
        "//conditions:default": False,
    }),
    validation_typecheck = select({
        ":validation_typecheck_flag": True,
        "//conditions:default": False,
    }),
    verbose = select({
        ":verbose_flag": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//ts/private:build_test",
        "//ts/private:options",
        "//ts/private:ts_config",
        "//ts/private:ts_project",
        "@aspect_rules_js//js:defs",
        "@aspect_tools_telemetry_report//:defs.bzl",
        "@bazel_skylib//lib:partial",
        "@bazel_skylib//rules:build_test",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//ts/private:npm_repositories",
        "//ts/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":repositories",
        "//ts/private:npm_repositories",
    ],
)

bzl_library(
    name = "proto",
    srcs = ["proto.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//ts/private:ts_proto_library",
        "@aspect_rules_js//js:defs",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
        "@bazel_lib//lib:copy_to_directory",
        "@bazel_lib//lib:directory_path",
        "@bazel_lib//lib:platform_utils",
        "@bazel_lib//lib:write_source_files",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)
