bazel_dep(name = "aspect_rules_ts", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_ts",
    path = "../..",
)

bazel_dep(name = "aspect_rules_js", version = "2.0.0", dev_dependency = True)  # repeated here only because we use the platforms definitions for rbe
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "rules_proto", version = "5.3.0-21.7", dev_dependency = True)
bazel_dep(name = "toolchains_protoc", version = "0.2.4", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    # This keeps the TypeScript version in-sync with the editor, which is typically best.
    ts_version_from = "//:package.json",
)

# Example demonstrating that you can also have a second typescript version
rules_ts_ext.deps(
    name = "npm_typescript3",
    ts_version = "3.9.9",
)
use_repo(rules_ts_ext, "npm_typescript", "npm_typescript3")
