bazel_dep(name = "aspect_rules_ts", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_ts",
    path = "../..",
)

# TODO: rules_js shouldn't be required in this module, as we don't reference it anywhere.
# However, on RBE only (!) we get an error:
# ERROR: /home/runner/work/rules_ts/rules_ts/e2e/external_dep/app/BUILD:4:11:
# While resolving toolchains for target //:test: com.google.devtools.build.lib.packages.BuildFileNotFoundException:
# no such package '@[unknown repo 'aspect_rules_js' requested from @]//platforms':
# The repository '@[unknown repo 'aspect_rules_js' requested from @]' could not be resolved:
# No repository visible as '@aspect_rules_js' from main repository
bazel_dep(name = "aspect_rules_js", version = "2.0.0-rc0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")
