bazel_dep(name = "aspect_rules_ts", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_ts",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()

# Example demonstrating that you can also have a second typescript version
rules_ts_ext.deps(
    name = "npm_typescript3",
    ts_version = "3.9.9",
)

# Example of an rc version
rules_ts_ext.deps(
    name = "npm_typescript-56rc",
    ts_integrity = "sha512-E3b2+1zEFu84jB0YQi9BORDjz9+jGbwwy1Zi3G0LUNw7a7cePUrHMRNy8aPh53nXpkFGVHSxIZo5vKTfYaFiBQ==",
    ts_version = "5.6.1-rc",
)
use_repo(rules_ts_ext, "npm_typescript", "npm_typescript-56rc", "npm_typescript3")

bazel_dep(name = "sub_external", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "sub_external",
    path = "./sub_external",
)
