module(
    name = "e2e_external_dep",
)

bazel_dep(name = "aspect_rules_ts", version = "0.0.0")
local_path_override(
    module_name = "aspect_rules_ts",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps()

# Example demonstrating that you can also have a second typescript version
rules_ts_ext.deps(
    name = "npm_typescript3",
    ts_version = "3.9.9",
)

# Example of an rc version
rules_ts_ext.deps(
    name = "npm_typescript-56rc",
    ts_integrity = "sha512-E3b2+1zEFu84jB0YQi9BORDjz9+jGbwwy1Zi3G0LUNw7a7cePUrHMRNy8aPh53nXpkFGVHSxIZo5vKTfYaFiBQ==",
    ts_version = "5.6.1-rc",
)
use_repo(rules_ts_ext, "npm_typescript", "npm_typescript-56rc", "npm_typescript3")

bazel_dep(name = "sub_external", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "sub_external",
    path = "./sub_external",
)

# Override root MODULE with newer versions for bazel9 compat
bazel_dep(name = "rules_nodejs", version = "6.5.0", dev_dependency = True)  # TODO(rm bazel6): repo_name = None)
bazel_dep(name = "aspect_bazel_lib", version = "2.20.0", dev_dependency = True)  # TODO(rm bazel6): repo_name = None)
