load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

ts_project(
    name = "declaration_only",
    declaration = True,
    emit_declaration_only = True,
)

write_source_files(
    name = "write_dts",
    files = {
        "a.d.ts_": ":declaration_only",
    },
)